@@ -1,92 +1,97 @@
 package dev.chimera.modules;
 
 import dev.chimera.ChimeraClient;
-import dev.chimera.EventListeners;
+import dev.chimera.amalthea.EventListenerIDs;
 import dev.chimera.amalthea.eventbus.EventListener;
 import dev.chimera.amalthea.events.misc.KeyEvents;
 import dev.chimera.amalthea.events.misc.TickEvent;
-import dev.chimera.modules.combat.KillAuraModule;
-import dev.chimera.modules.common.FarmAuraModule;
-import dev.chimera.modules.player.NoFallModule;
 import net.minecraft.client.MinecraftClient;
 
-import dev.chimera.modules.player.FlightModule;
-
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class ModuleInitializer {
-    private static boolean INITIALIZED = false;
-    private static final List<Module> MODULE_LIST = new ArrayList<>();
+    //DO NOT CHANGE THIS MAP, IT SHOULD ONLY BE ACCESSED AT STARTUP AND NOT CHANGED LATER ON (UNLESS YOU KNOW WHAT YOU'RE DOING)
+    public static final HashMap<String, Module> MODULE_NAMES = new HashMap<>();
+    public static final HashMap<Integer, Module> MODULE_KEYBINDS = new HashMap<>();
 
-    private static void buildModuleList() {
+    public static ArrayList<Module> ENABLED_MODULES = new ArrayList<>();
+    public static ArrayList<Module> DISABLED_MODULES = new ArrayList<>();
 
-        /* Register all modules here in the format `MODULE_LIST.add(new YourModule());` */
+    private static boolean initialized = false;
 
-        MODULE_LIST.add(new ExampleModule());
-        MODULE_LIST.add(new FlightModule());
-        MODULE_LIST.add(new NoFallModule());
-        MODULE_LIST.add(new KillAuraModule());
-        MODULE_LIST.add(new FarmAuraModule());
-
-    }
     public void initializeModules() {
-        buildModuleList();
-
-        MODULE_LIST.forEach(Module::init);
-
-        INITIALIZED = true;
+        MODULE_NAMES.values().forEach((v) -> {
+            v.init();
+            MODULE_KEYBINDS.put(v.getKeyBinding(), v);
+        });
+        ChimeraClient.LOGGER.error(MODULE_NAMES.toString());
+        ChimeraClient.LOGGER.error(MODULE_KEYBINDS.toString());
+        initialized = true;
 
         ChimeraClient.EVENT_BUS.registerListenersInClass(this);
     }
 
-    public static void addModules(List<Module> moduleList) {
-        MODULE_LIST.addAll(moduleList);
-        moduleList.forEach(Module::init);
+
+    public static <T extends Module> void addModule(T module) {
+        MODULE_NAMES.put(module.getModuleName(), module);
     }
 
-    public static List<Module> getModuleList() {
-        return MODULE_LIST;
+    public static List<Module> getAllModules() {
+        return MODULE_KEYBINDS.values().stream().toList();
     }
 
     public static List<Module> getEnabledModuleList() {
-        return new ArrayList<Module>(MODULE_LIST.stream().filter(Module::getModuleEnabled).toList());
+        return MODULE_NAMES.values().stream()
+                .filter(Module::getModuleEnabled)
+                .collect(Collectors.toList());
     }
 
+
+    @EventListener(id = EventListenerIDs.moduleInitializerTickEventStart)
+    public static void onTickStart(TickEvent.Start event) {
+        if (!initialized || MinecraftClient.getInstance().player == null) {
+            return;
+        }
+        MODULE_NAMES.values().forEach(module -> module.onTickStart(event));
+    }
+
+    @EventListener(id = EventListenerIDs.moduleInitializerTickEventEnd)
+    public static void onTickEnd(TickEvent.End event) {
+        if (!initialized || MinecraftClient.getInstance().player == null) {
+            return;
+        }
+        MODULE_NAMES.values().forEach(module -> module.onTickEnd(event));
+    }
+
+
     public static Module findModule(String name) {
-        for (Module module : MODULE_LIST) {
-            if (module.getModuleName().equals(name)) {
-                return module;
-            }
+        if (MODULE_NAMES.containsKey(name)) {
+            return MODULE_NAMES.get(name);
         }
         return null;
     }
 
-    @EventListener( id = EventListeners.moduleInitializerTickEventStart )
-    public static void onTickStart(TickEvent.Start event) {
-        if (MinecraftClient.getInstance().player == null || !INITIALIZED) return;
-        for (Module module : MODULE_LIST) {
-            module.onTickStart(event);
-        }
+    @EventListener(id = EventListenerIDs.moduleInitializerKeyPress)
+    public static void onKeyPress(KeyEvents.InGame.Press event) {
+        MODULE_KEYBINDS.computeIfPresent(event.key, (k, v) -> {
+            v.toggle();
+            v.sendToggledMsg();
+            return v;
+        });
+
     }
 
-    @EventListener( id = EventListeners.moduleInitializerTickEventEnd )
-    public static void onTickEnd(TickEvent.End event) {
-        if (MinecraftClient.getInstance().player == null || !INITIALIZED) return;
-        for (Module module : MODULE_LIST) {
-            module.onTickEnd(event);
-        }
-    }
+    @EventListener(id = EventListenerIDs.moduleInitializerKeyRelease)
+    public static void onKeyRelease(KeyEvents.InGame.Press event) {
 
-    @EventListener( id = EventListeners.moduleInitializerKeyPress )
-    public static void onKeyPress(KeyEvents.Press event) {
-        List<Module> toToggleModulesList = getModuleList().stream().filter((module) -> module.keyBindingMatches(event.key)).toList();
-        toToggleModulesList.forEach(Module::toggle);
-    }
-
-    @EventListener( id = EventListeners.moduleInitializerKeyRelease )
-    public static void onKeyRelease(KeyEvents.Release event) {
-        List<Module> toToggleModulesList = getModuleList().stream().filter((module) -> module.keyBindingMatches(event.key) && module.releaseToToggle).toList();
-        toToggleModulesList.forEach(Module::toggle);
+        MODULE_KEYBINDS.computeIfPresent(event.key, (k, v) -> {
+            if (v.releaseToToggle) {
+            }
+            return v;
+        });
     }
 }
+
